Added a mail message

--- a/AKSKUS/akskus/templates/akskus/home.html
+++ b/AKSKUS/akskus/templates/akskus/home.html
@@ -3,98 +3,92 @@
 		<link rel="icon" href="../static/images/logo.png">
 
 		<title>
-			AKSKUS
+			Akskus
 		</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <script src="../static/references/jquery.min.js"></script>
+         <script src="../static/references/jquery.min.js"></script>
         <link rel="stylesheet" href="../static/references/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../static/css/log_and_signup.css">
         <script src="../static/references/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
         <style></style>
         <link rel="stylesheet" href="../static/css/log_and_signup.css">
         <link rel="stylesheet" href="../static/css/home.css">
 
         <script type="text/javascript">
-            $(document).ready(function () {
-        $('#button').click(function () {
-            $('#progress').html('tp done')
-        })
-            });
-
         </script>
 	</head>
 	<body>
     <div id="full" class="">
-    <div id="container" class="container-fluid">
-        <div class="navbar navbar-inverse navbar-fixed-top" >
-            <div class="navbar-header" style="float: none;padding-right: 2%;">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#hide_small">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-               <img src="../static/images/logo.png" class="navbar-brand">
-                    <div class="row">
-        <div class="form-group ">
-        <label class="col-sm-1 control-label" for="input_pass" style="font-size: 20px"></label>
-        <div class="col-sm-4">
-            <table>
-                <tr>
-                    <td><input type="text" class="form-control input-lg" id="input_search" placeholder="Search"></td>
-                </tr>
-                <tr >
-                    <td style="background: white;border-bottom-left-radius: 5px;border-bottom-right-radius: 5px; font-size: 18px">
-                        aa</td>
-                </tr>
-                </table>
-        </div>
-            <div class="col-sm-5">
-
-                <div class="adjust" id="id_dp" style="float: right" >
-
-                <form class=" form-inline" role="form">
-
-                <label for="id"  class="lab" style="font-size: 30px">
-                    <img id="dp" src="../static/images/mustaches%20dp.jpg" class="img-thumbnail">
-                    Ajay kushwaha
-                </label>
-
-                </form>
-
+       <nav class="navbar navbar-inverse">
+          <div class="container-fluid">
+            <div class="navbar-header" style="padding-top: 0px;padding-bottom: 0px;height: 50px;">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#"><img id="logo" src="../static/images/logo.png"  style="height: 50px;width: 60px;"></a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <form class="navbar-form navbar-left" role="search">
+                <div class="form-group input-group">
+                  <input type="text" class="form-control" placeholder="Search..">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" style="height: 34px;">
+                      <span class="glyphicon glyphicon-search"></span>
+                    </button>
+                  </span>
                 </div>
+              </form>
+              <ul class="nav navbar-nav navbar-right" style="padding-top: 10px">
+                 <li ><div style="width: 60px"><img id="dp" src="../static/images/mustaches%20dp.jpg" style="height: 32px;width: 32px; border-radius: 10%"></div></li>
 
+                  <li ><div  style="color: white;font-size: 35px;width:  60px;">
+                       <p><span class="glyphicon glyphicon-menu-hamburger" style=""></span></p>
+                </div></li>
+                <li><div style="color: white;font-size: 35px;width:  60px;">
+                       <p><span class="glyphicon glyphicon-list-alt" style=""></span></p>
+                    </div></li>
 
+                  <li><div style="color: white;font-size: 35px;width:  60px;">
+                       <p><span class="glyphicon glyphicon-option-horizontal" style=""></span></p>
+                    </div></li>
+              </ul>
             </div>
+          </div>
+        </nav>
+        <div id="portfolio" class="container-fluid text-center bg-grey">
+          <h2>Portfolio</h2><br>
+          <h4>What we have created</h4>
+          <div class="row text-center slideanim">
+            <div class="col-sm-4">
+              <div class="thumbnail">
+                <img src="paris.jpg" alt="Paris" width="400" height="300">
+                <p><strong>Paris</strong></p>
+                <p>Yes, we built Paris</p>
+              </div>
             </div>
-
-    </div>
-  </div>
-            <div id="hide_small">
-
+            <div class="col-sm-4">
+              <div class="thumbnail">
+                <img src="newyork.jpg" alt="New York" width="400" height="300">
+                <p><strong>New York</strong></p>
+                <p>We built New York</p>
+              </div>
             </div>
-
+            <div class="col-sm-4">
+              <div class="thumbnail">
+                <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
+                <p><strong>San Francisco</strong></p>
+                <p>Yes, San Fran is ours</p>
+              </div>
+            </div>
+          </div>
         </div>
-
-    </div>
-        <br><br>
-<div class="container" id="container-panel">
-  <div class="row">
-      {% for some in all%}
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">{{ some.name}}</div>
-        <div class="panel-body"><img src="http://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">{{ some.mob_num}}</div>
-      </div>
-    </div>
-{% endfor %}
-    </div>
-
-
-</div>
-</div>
     <div id="foot" class="navbar navbar-inverse navbar-fixed-bottom">
    </div>
+</div>
     </body>
 
 </html>
